# homework3-task25-

./: Autotest.cpp  Autotest.hpp  CMakeLists.txt  README.md  func.cpp  header.hpp  homework3_2.cpp
